# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
2024/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs
2025/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  template.rs
