[workspace]
members = ["cli"]

[workspace.dependencies]
advent = { git = "https://github.com/rossmacarthur/advent", rev = "33602ef987536049b79569d799603e0122fb4e0a" }
anyhow = "1.0.75"
argh = "0.1.12"
curl = "0.4.44"
itertools = "0.13.0"
open = "5.0.1"
petgraph = "0.6.5"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.3"
time = "0.3.30"
toml = "0.8.8"
vectrix = "0.3.0"
yansi = "1.0.1"

[package]
name = "advent-bins"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
advent = { workspace = true, features = ["prelude"] }
regex = { workspace = true }
rayon = "1.10.0"
itertools = {workspace = true}

[[bin]]
name = "202401"
path = "2024/01.rs"

[[bin]]
name = "202402"
path = "2024/02.rs"

[[bin]]
name = "202403"
path = "2024/03.rs"

[[bin]]
name = "202404"
path = "2024/04.rs"

[[bin]]
name = "202405"
path = "2024/05.rs"

[[bin]]
name = "202406"
path = "2024/06.rs"

[[bin]]
name = "202407"
path = "2024/07.rs"

[[bin]]
name = "202408"
path = "2024/08.rs"

[[bin]]
name = "202409"
path = "2024/09.rs"

[[bin]]
name = "202410"
path = "2024/10.rs"

[[bin]]
name = "202411"
path = "2024/11.rs"

[[bin]]
name = "202412"
path = "2024/12.rs"

[[bin]]
name = "202413"
path = "2024/13.rs"

[[bin]]
name = "202414"
path = "2024/14.rs"

[[bin]]
name = "202415"
path = "2024/15.rs"

[[bin]]
name = "202416"
path = "2024/16.rs"

[[bin]]
name = "202417"
path = "2024/17.rs"

[[bin]]
name = "202418"
path = "2024/18.rs"

[[bin]]
name = "202419"
path = "2024/19.rs"

[[bin]]
name = "202420"
path = "2024/20.rs"

[[bin]]
name = "202421"
path = "2024/21.rs"

[[bin]]
name = "202422"
path = "2024/22.rs"

[[bin]]
name = "202423"
path = "2024/23.rs"
