[workspace]
members = ["cli"]

[workspace.dependencies]
advent = { git = "https://github.com/rossmacarthur/advent", rev = "1ce630394ce6b6bef242fbec55172f43369d47f2" }
anyhow = "1"
argh = "0.1"
curl = "0.4"
itertools = "0.14"
open = "5.3"
rayon = "1.10"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
time = "0.3"
toml = "0.9"
yansi = "1"

[package]
name = "advent-bins"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
advent = { workspace = true, features = ["prelude"] }
itertools = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }

[features]
default = []
default-inputs = []

[lints.clippy]
needless_range_loop = "allow"

[[bin]]
name = "202401"
path = "2024/01.rs"

[[bin]]
name = "202402"
path = "2024/02.rs"

[[bin]]
name = "202403"
path = "2024/03.rs"

[[bin]]
name = "202404"
path = "2024/04.rs"

[[bin]]
name = "202405"
path = "2024/05.rs"

[[bin]]
name = "202406"
path = "2024/06.rs"

[[bin]]
name = "202407"
path = "2024/07.rs"

[[bin]]
name = "202408"
path = "2024/08.rs"

[[bin]]
name = "202409"
path = "2024/09.rs"

[[bin]]
name = "202410"
path = "2024/10.rs"

[[bin]]
name = "202411"
path = "2024/11.rs"

[[bin]]
name = "202412"
path = "2024/12.rs"

[[bin]]
name = "202413"
path = "2024/13.rs"

[[bin]]
name = "202414"
path = "2024/14.rs"

[[bin]]
name = "202415"
path = "2024/15.rs"

[[bin]]
name = "202416"
path = "2024/16.rs"

[[bin]]
name = "202417"
path = "2024/17.rs"

[[bin]]
name = "202418"
path = "2024/18.rs"

[[bin]]
name = "202419"
path = "2024/19.rs"

[[bin]]
name = "202420"
path = "2024/20.rs"

[[bin]]
name = "202421"
path = "2024/21.rs"

[[bin]]
name = "202422"
path = "2024/22.rs"

[[bin]]
name = "202423"
path = "2024/23.rs"

[[bin]]
name = "202424"
path = "2024/24.rs"

[[bin]]
name = "202425"
path = "2024/25.rs"

[[bin]]
name = "202501"
path = "2025/01.rs"

[[bin]]
name = "202502"
path = "2025/02.rs"

[[bin]]
name = "202503"
path = "2025/03.rs"
